Finished About Page & Minor Revision. Build: Pre-Dashboard implementation

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ html {
 body {
 	background-size: cover;
 	font-family: 'Raleway';
-	background: linear-gradient(107.76deg, #21464b 0%, #3860a4 99.07%);
+	background: linear-gradient(107.76deg, #242525 0%, #3b63a8 99.07%);
+	background-size: cover;
 	height: 100%;
 }
 
@@ -20,5 +21,5 @@ body {
 }
 
 .contact-btn-backdrop {
-	box-shadow: 4px 4px 35px rgba(76, 137, 255, 0.25);
+	box-shadow: 4px 4px 35px rgba(76, 137, 255, 0.1);
 }
