"Color Scheme Changed, Minor Changes"

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@ html {
 
 body {
 	background-size: cover;
-	font-family: 'Raleway';
-	background: linear-gradient(107.76deg, #3b4042 0%, #1b5fd4 99.07%);
+	font-family: 'Poppins';
+	background: #0d0f1a;
 	background-size: cover;
 	height: 100%;
 }
