Reverted back to original color, fixed footer, merged with new dashboard color scheme

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 body {
 	background-size: cover;
 	font-family: 'Poppins';
-	background: #0d0f1a;
+	background: linear-gradient(107.76deg, #3b4042 0%, #1b5fd4 99.07%);
 	background-size: cover;
 	height: 100%;
 }
